# genobear

./: .env.example  .env.template  .gitattributes  .gitignore  AGENTS.md  ANNOTATION_USAGE.md  ENSEMBL_DOWNLOADER_README.md  ENSEMBL_DOWNLOADER_USAGE.md  README.md  UPLOAD_HF.md  demo_pathogenicity.py  pyproject.toml
.cursor/rules/: biobear.mdc  logging.mdc  main.mdc  structure.mdc
.github/: README.md
.github/workflows/: ci.yml  pr.yml
data/: longevity_map.tsv
data/output/: antku_small_annotated.parquet
dataset_cards/: README.md  clinvar_card_template.md  ensembl_card_template.md
docs/: ANNOTATION.md  UPLOAD_HF.md
notebooks/: clinvar_notebook.ipynb  dbsnp_notebook.py  load_annotated_parquet.ipynb
src/genobear/: __init__.py  __main__.py  annotate.py  api.py  cli.py  config.py  download.py  io.py  multiprocessing_config.py  old_annotate.py  prepare.py
src/genobear/annotation/: __init__.py  annotate.py  discovery.py
src/genobear/annotators/: __init__.py  base_annotator.py  vcf_annotator.py
src/genobear/databases/: __init__.py  annovar.py  clinvar.py  dbsnp.py  exomiser.py  hgmd.py  refseq.py
src/genobear/downloaders/: __init__.py  clinvar_downloader.py  dbsnp_downloader.py  ensembl_download_pipeline.py  ensembl_downloader.py  multi_vcf_downloader.py  uploader.py  vcf_downloader.py  vcf_pipeline.py
src/genobear/old_databases/: annovar.py  dbsnp.py  exomiser.py  hgmd.py  refseq.py  vcf_downloader.py
src/genobear/pipelines/: __init__.py  ensembl_annotations.py  helpers.py  probe.py  runtime.py  vcf_downloader.py  vcf_parquet_splitter.py
src/genobear/pipelines/annotation/: __init__.py  annotator.py  hf_dataset_downloader.py  runners.py  vcf_parser.py
src/genobear/pipelines/preparation/: __init__.py  huggingface_uploader.py  runners.py  vcf_parquet_splitter.py
src/genobear/utils/: __init__.py  conversion.py  discovery.py  download.py
tests/: conftest.py  test_annotation_pipeline_integration.py  test_clinvar_annotation.py  test_clinvar_downloader.py  test_ensembl_downloader_functional.py  test_vcf_annotator.py  test_vcf_annotator_simple.py  test_vcf_pipeline_integration.py
