[project]
name = "genobear"
version = "0.1.0"
description = "Genomic Database Management and Annotation Tool"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "biobear>=0.23.7",
    "eliot>=1.17.0",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pycomfort>=0.0.18",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.scripts]
genobear = "genobear:app"
download = "genobear.download:app"
annotate = "genobear.annotate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
