[project]
name = "genobear"
version = "0.1.1"
description = "Genomic Database Management and Annotation Tool"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "eliot>=1.17.0",
    "fsspec>=2025.9.0",
    "huggingface-hub>=0.34.4",
    "pipefunc[all]>=0.85.2",
    "polars-bio>=0.13.1",
    "pooch>=1.8.2",
    "pycomfort>=0.0.18",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "rustworkx>=0.16.0",
    "typer>=0.17.3",
]

[project.scripts]
genobear = "genobear:app"
download = "genobear.download:app"
annotate = "genobear.annotate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genobear"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "jupyterlab>=4.4.5",
    "marimo>=0.14.13",
    "pytest>=8.4.1",
    "python-lsp-server[all]>=1.13.0",
    "google-genai>=1.27.0",
    "ruff>=0.12.7",
    "sqlglot>=27.5.1",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0"
]

[tool.pytest.ini_options]
markers = [
    "large_download: marks tests that download large files (multi-GB) - skip by default",
    "integration: marks integration tests that require network access",
    "slow: marks tests that take a long time to run"
]

# Default pytest behavior: extra verbose and no capture to allow Eliot/stdout output
addopts = "-vvv -s -m 'not large_download'"
testpaths = ["tests"]


[tool.marimo.runtime]
dotenv = [".env"]
